--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   /* Set up the initial map center and zoom level */
   var map = L.map('map', {
-    center: [41.77, -72.69], // EDIT coordinates to re-center map
+    center: [43.769153016851455, 11.249892303605147], // Florence, Italy
     zoom: 12,  // EDIT from 1 (zoomed out) to 18 (zoomed in)
     scrollWheelZoom: false
   });
@@ -41,7 +41,7 @@
   }).addTo(map);
 
   /* Display a point marker with pop-up text */
-  L.marker([41.77, -72.69]).addTo(map) // EDIT marker coordinates
+  L.marker([43.769153016851455, 11.249892303605147]).addTo(map) // Florence, Italy
   .bindPopup("Insert pop-up text here"); // EDIT pop-up text message
 
   </script>
