--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   /* Display a point marker with pop-up text */
   L.marker([43.769153016851455, 11.249892303605147]).addTo(map) // Florence, Italy
-  .bindPopup("Insert pop-up text here"); // EDIT pop-up text message
+  .bindPopup("Florence, Italy"); // EDIT Florence, Italy
 
   </script>
 </body>
